# rustscrub

./: Cargo.toml  README.md
src/: header.rs  main.rs  scrub.rs
