[package]
name = "rustscrub"
version = "0.1.0"
edition = "2021"
authors = ["volker schwaberow <volker@schwaberow.de>"]
homepage = "https://schwaberow.de"
repository = "https://github.com/vschwaberow/rustscrub"
keywords = ["cli", "rust", "scrub"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A CLI tool for scrubbing sensitive data from files."
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
[dependencies]
clap = { version = "4.4.8", features = ["derive"] }